syntax = "proto3";

option csharp_namespace = "Client";

service MessageHistory {
  rpc GetMessageHistory (HistoryRequest) returns (HistoryResponse);
}

message HistoryRequest {
  string fromUser = 1;
  string toUser = 2;
}

message HistoryResponse {
  repeated Message messages = 1;
}

message Message {
  string fromUser = 1;
  string toUser = 2;
  string content = 3;
}
